--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jubilant-invention",
   "version": "0.1.0",
   "private": true,
+  "author": "baidauletov",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -19,10 +20,15 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-eslint": "^10.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "prettier": "^1.19.1",
+    "prettier-eslint-cli": "^5.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
